--- a/style.css
+++ b/style.css
@@ -48,6 +48,11 @@ footer {
     text-align: center;
     background:purple;
 }
+#hero {
+    background-image: url("dots.jpg");
+    background-size:cover;
+    background-color: #cccccc;
+   }
 
 /*Designing of Contact Us*/
 #Contact {
