--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: gray;
+    background-color: light gray;
 }
 
 .form-shape input,
