--- a/style.css
+++ b/style.css
@@ -51,11 +51,11 @@ footer {
 
 /*Designing of Cards*/
 #hero {
-    background-image: url("dots.jpg");
+    background-image: url("dots2.jpg");
     background-size:cover;
    }
 .hero {
-    background-image: url("dots.jpg");
+    background-image: url("dots2.jpg");
     background-size:cover;
    }
 
