--- a/style.css
+++ b/style.css
@@ -73,8 +73,17 @@ footer {
     flex-direction: column;
     align-items: center;
     background-color: light gray;
+     border: 2px solid black;
+    border-radius: 15px
 }
-
+.Contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: light gray;
+     border: 2px solid black;
+    border-radius: 15px
+}
 
 .form-shape input,
 .form-shape select,
