--- a/style.css
+++ b/style.css
@@ -68,21 +68,23 @@ footer {
 }
 
 /*Designing of Contact Us*/
-#Contact {
+#contact {
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: light gray;
      border: 2px solid black;
     border-radius: 15px
+    margin-botton: 10px;
 }
-.Contact {
+.contact {
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: light gray;
      border: 2px solid black;
     border-radius: 15px
+     margin-botton: 10px;
 }
 
 .form-shape input,
