--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ ul li {
 }
 
 ul li a:hover {
-    background-color: red;
+    background-color: rgb(162, 207, 177);
     border-radius: 10px;
 }
 
@@ -54,7 +54,10 @@ ul li a:hover {
     background-image: url("dots3.jpg");
     background-size:cover;
    }
-
+/*Designing of Cards*/
+.company{
+    background: rgb(145, 93, 132)
+}
 /*Designing of Cards*/
 .container mt-5{
       background: rgb(145, 93, 132);
@@ -68,17 +71,9 @@ ul li a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-       border: 2px solid black;
+       border: 1px solid black;
     border-radius: 15px;
     margin-botton: 50px;
-}
-.contact {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-        border: 2px solid black;
-    border-radius: 15px;
-     margin-botton: 50px;
 }
 
 .form-shape input,
@@ -90,14 +85,9 @@ ul li a:hover {
 /*Designing the footer*/
 footer {
     text-align: center;
-    background-color: light gray;
+    background-color:lightgrey;
 }
-.container{
-    background-color: light gray;
-}
-#container{
-    background-color: gray
-}
+
 @media only screen and (min-height:1000px) {
     #navbar {
         height: 10vh;
